InputStream instead of accessing the file system directly